--- a/gr-qc-0304042/black5.tex
+++ b/gr-qc-0304042/black5.tex
@@ -53,6 +53,7 @@
 \address{Department of Mathematics, Mathematical Sciences Building, 
 University of Missouri, Columbia, Missouri 65211, U.S.A.}
 
+\raggedbottom
 
 \jl{0}
 
@@ -612,12 +613,14 @@ to assume that the collapsing object is perfectly isolated, so that
 this asymptotically flat regime extends to infinity, and we shall do
 so, but one can verify that the physics does not depend on this.)
 
+\bigskip\bigskip
 \epsfysize=3in
-\epsfbox{fig1.eps}
+\centerline{\epsfbox{fig1.eps}}
 \figure{The Penrose diagram of a spherically symmetric object collapsing to form
 a black hole.  The future and past null infinities $\scri ^\pm$ are shown, as
 well as the event horizon.  The black hole is the region at and above the event
 horizon.}
+\bigskip
 
 The standard Penrose diagram for this space--time is shown in
 figure~1, and the reader will find it convenient to refer to this.  In
@@ -879,14 +882,14 @@ to $\Sigma ^-$ will show the effects of the collapse.
 
 \vfill\eject
 
+\bigskip\bigskip
 \epsfxsize=4.9in
 \centerline{\epsfbox{fig2.eps}}
 \figure{The three Cauchy surfaces used in propagating the field modes backwards
 in time from $\scri ^+$ to $\scri ^-$.  The portions in the black hole (on and
 above the event horizon) are given for conceptual completeness and do not
 contribute to the calculation.}
-
-\medskip
+\bigskip
 
 In what follows, it will be convenient to refer to figure~2.  The
 field data we are given at late times on $\scri ^+$.  While $\scri ^+$
@@ -2568,8 +2571,10 @@ that it is in the stationary portion of the Schwarzschild solution, and we let
 $\Sigma _t =\Gamma _t\cup {\cal N}_t$ be the surface got by flowing forward by
 an amount $t>0$ along the vector field $\partial /\partial t$.  (See figure 3.)
 
+\bigskip\bigskip
 \epsfysize=3in
-\epsfbox{fig3.eps}
+\centerline{\epsfbox{fig3.eps}}
+\medskip
 \figure{The geometry of the partial Cauchy surfaces used in the argument that
 the rate--of--entropy--production calculations support the strong form of the
 generalized second law.  The partial Cauchy surface $\Sigma$ consists of two
@@ -2578,6 +2583,7 @@ radiative data.  Then ${\cal N}_0$ is the portion of ${\cal N}$ to the future of
 the retarded time $u=u_0$ at which the Hawking radiation nominally starts.  The
 definitions for $\Sigma _t$ are got by flowing all quantities except $u=u_0$
 forward along the Killing field.}
+\bigskip
 
 There will be some nominal retarded time $u_0$ at which the Hawking process may
 be said to have begun (and transient behavior passed).  We shall assume that we
