--- a/gr-qc-0304042/preprint.sty
+++ b/gr-qc-0304042/preprint.sty
@@ -1481,7 +1481,7 @@ REACTIONS\strut\quad #1\strut}\kern0.5pt}\kern12pt\vrule}}}
 \def\figure#1{\figc@ption{#1}\bigskip} 
 % 
 \def\figc@ption#1{\global\advance\figno by 1\gdef\labeltype{\figlabel}% 
-   {\parindent=\secindent\smallfonts\hang 
+   {\bigskip\noindent\smallfonts %\parindent=\secindent\smallfonts\hang 
     {\bf Figure \ifappendix\applett\fi\the\figno.} \rm #1\par}} 
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
