--- a/gr-qc-0304042/preprint.sty
+++ b/gr-qc-0304042/preprint.sty
@@ -1135,8 +1135,7 @@ REACTIONS\strut\quad #1\strut}\kern0.5pt}\kern12pt\vrule}}}
 \def\SSC{{\it Solid State Commun.}} 
 \def\ZP{{\it Z. Phys.}} 
 % 
-\headline={\ifodd\pageno{\ifnum\pageno=\firstpage\hfill 
-   \else\rrhead\fi}\else\lrhead\fi} 
+\headline={} 
 % 
 \def\rrhead{\textfonts\hskip\secindent\it 
     \shorttitle\hfill\rm\folio} 
@@ -1144,7 +1143,7 @@ REACTIONS\strut\quad #1\strut}\kern0.5pt}\kern12pt\vrule}}}
 \def\lrhead{\textfonts\hbox to\secindent{\rm\folio\hss}% 
     \it\aunames\hss} 
 % 
-\footline={\ifnum\pageno=\firstpage \hfill\textfonts\rm\folio\fi} 
+\footline={\hfill\textfonts\rm\folio\hfill} 
 % 
 % 
 \def\@rticle#1#2{\vglue.5pc 
