--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -623,11 +623,11 @@ holes spacetimes
 are very similiar.
 
 The conformal (or Penrose) diagrams of  3+1 Minkowski, and 1+1 Minkowski with
-the Rindler wedge are shown in figures (1) and (2). In general, such
+the Rindler wedge are shown in figures (\ref{f1}) and (\ref{f2}). In general, such
 diagrams are constructed
-by conformally  compactifing the spacetime. The convention is that null paths
+by conformally  compactifying the spacetime. The convention is that null paths
 are 45 degree lines, so the causal structure can be easily read off.
-See {\it e.g.} \cite{he,wald} for details.
+See {\it e.g.} \cite{wald, he} for details.
 %
 \begin{figure}[tb]
 \begin{center}
