--- a/1409.1231v5/jerusalemarxivv5.tex
+++ b/1409.1231v5/jerusalemarxivv5.tex
@@ -130,13 +130,14 @@ ds^2=\frac{4}{r}e^{-r}\left(-dT^2+dX^2\right)+r^2 d\Omega_2^2.
 \ee
 Note that there is now no singularity of any kind at $r=1$.  
 
-\begin{figure}
+The expression \eqref{TXmet} defines a geometry over the full $XT$ plane; it is interesting to understand which parts of it correspond to the regions discussed in the previous subsection.  This is illustrated in figure \ref{kruskfig}.  
+\begin{figure}[t]
 \begin{center}
 \includegraphics[height=6cm]{kruskal.pdf}
 \caption{The $XT$ plane of the Kruskal extension.  Lines of constant $U$ and $V$, or in other words radial null geodesics, are straight lines with slope $\pm \pi/4$.  Lines of constant $r$ are hyperboloids centered at the origin, with the blue regions having $r>1$ and the red/green regions having $r<1$.  The horizons are the dashed lines.  The original exterior region is the right light blue wedge, the new exterior is the left blue wedge, the future interior is in green, and the past interior is in red.  It is manifest that no radial null geodesic can escape the future interior into one of the blue regions, and it is also clear that no null geodesic connects the right and left blue wedges.}\label{kruskfig}
 \end{center}
 \end{figure}
-The expression \eqref{TXmet} defines a geometry over the full $XT$ plane; it is interesting to understand which parts of it correspond to the regions discussed in the previous subsection.  This is illustrated in figure \ref{kruskfig}.  The region defined by $r>1$, $-\infty<t<\infty$ in the old Schwarzschild coordinates is sent to the right blue wedge.  In continuing to $r<1$ however there is a branch cut in the definition \eqref{UVK} which allows us to either reach the region $T>0$, $X^2-T^2<0$, shown in green, \textit{or} the region $T<0$, $X^2-T^2<0$, which is shown in red.  The singularity at $r=0$ is the hyperboloid $X^2-T^2=-1$, so it has not one but two connected components, one at the boundary of each of these regions.  I'll refer to these two regions as the future and past interiors respectively.  Finally there is a fourth region, the left blue wedge, which is a second asymptotically Minkowski region in which we can again have $r\gg 1$.  Combining all of the regions, we can interpret the full Schwarzschild geometry as a wormhole connecting two asymptotically-flat universes, each of them behaving at $r\gg 1$ as if there were a gravitational point source of mass $M$.  The wormhole is non-traversable in the sense that no signal can be sent from one blue region to the other, but observers who jump in from opposite sides are able to meet in the middle and compare notes!
+The region defined by $r>1$, $-\infty<t<\infty$ in the old Schwarzschild coordinates is sent to the right blue wedge.  In continuing to $r<1$ however there is a branch cut in the definition \eqref{UVK} which allows us to either reach the region $T>0$, $X^2-T^2<0$, shown in green, \textit{or} the region $T<0$, $X^2-T^2<0$, which is shown in red.  The singularity at $r=0$ is the hyperboloid $X^2-T^2=-1$, so it has not one but two connected components, one at the boundary of each of these regions.  I'll refer to these two regions as the future and past interiors respectively.  Finally there is a fourth region, the left blue wedge, which is a second asymptotically Minkowski region in which we can again have $r\gg 1$.  Combining all of the regions, we can interpret the full Schwarzschild geometry as a wormhole connecting two asymptotically-flat universes, each of them behaving at $r\gg 1$ as if there were a gravitational point source of mass $M$.  The wormhole is non-traversable in the sense that no signal can be sent from one blue region to the other, but observers who jump in from opposite sides are able to meet in the middle and compare notes!
 
 
 \subsection{Penrose diagrams}\label{penrosesec}
