--- a/helpers/fixarxiv-palatino-mathpazo.tex
+++ b/helpers/fixarxiv-palatino-mathpazo.tex
@@ -17,7 +17,8 @@
 \usepackage{microtype}
 
 % hyperref last because otherwise some things go wrong.
-\usepackage[colorlinks=true
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -25,7 +26,7 @@
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,linktocpage=true]{hyperref}
+,linktocpage=true}
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
