--- a/gr-qc-9305007/gr-qc-9305007.tex
+++ b/gr-qc-9305007/gr-qc-9305007.tex
@@ -4,11 +4,56 @@
 %Date (revised): Tue, 31 Aug 1993 17:23:25 -0600
 
 %This paper is in pure LaTeX.
-\documentstyle[12pt]{article}
+\documentclass[12pt]{article}
 %\flushbottom
-\textwidth 15cm
-\textheight 22cm
-\topmargin -10mm
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \begin{document}
 \title{AVERAGE ENTROPY OF A SUBSYSTEM\thanks
 {Alberta-Thy-22-93, gr-qc/9305007, Phys.\ Rev.\ Lett. {\bf 71}, 1291
@@ -23,7 +68,6 @@ Internet:  don@page.phys.ualberta.ca}
 \maketitle
 \large
 \begin{abstract}
-\baselineskip 25pt
 If a quantum system of Hilbert space dimension $mn$ is in a random
 pure state,
 the average entropy of a subsystem of dimension $m\leq n$ is
@@ -41,7 +85,6 @@ PACS numbers: 05.30.Ch, 03.65.-w, 05.90.+m
 \end{abstract}
 \normalsize
 \pagebreak
-\baselineskip 24.2pt
 
      One natural way to get entropy, even for a system in a pure
 quantum state,
@@ -362,15 +405,15 @@ $\rho_A$) is
 	=\frac{\sqrt{(x-a)(b-x)}}{2\pi x}.
 	\end{equation}
 This gives, under our large $(m, n)$ approximation,
-	\begin{eqnarray}
-	S_{m,n} &\simeq &\ln n - \frac{m}{2n}\int_a^b\sigma(x)x\ln x
-dx
-	=\ln n - \frac{2}{\pi}\int_{-1}^{1}dy
+	\begin{align}
+	S_{m,n} &\simeq \ln n - \frac{m}{2n}\int_a^b\sigma(x)x\ln x
+dx\nonumber\\
+	&=\ln n - \frac{2}{\pi}\int_{-1}^{1}dy
 y\sqrt{1-y^2}\ln(2+w+2\sqrt{1+w}y)
-	\nonumber \\&=&\ln n - \frac{2}{\pi}
+	\nonumber \\&=\ln n - \frac{2}{\pi}
 	\int_{0}^{2\pi}d\theta
 \sin^2\theta\ln\sqrt{1+2r\cos\theta+r^2},
-	\end{eqnarray}
+	\end{align}
 with
 	\begin{equation}
         y\equiv\frac{2x-a-b}{b-a}\equiv\cos\theta,\;\;
