--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-18 07:15:17 -0400 
+%% Created for Pete Su at 2023-08-18 07:21:59 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Page1993,
+	author = {Don N. Page},
+	date-added = {2023-08-18 07:21:50 -0400},
+	date-modified = {2023-08-18 07:21:53 -0400},
+	doi = {10.1103/physrevlett.71.1291},
+	journal = {Phys. Rev. Lett.},
+	note = {\href{http://arxiv.org/abs/gr-qc/9305007v2}{arxiv:gr-qc/9305007v2}},
+	number = {9},
+	pages = {1291--1294},
+	publisher = {American Physical Society ({APS})},
+	title = {Average entropy of a subsystem},
+	url = {https://doi.org/10.1103%2Fphysrevlett.71.1291},
+	volume = {71},
+	year = 1993,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevlett.71.1291},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevlett.71.1291}}
 
 @article{Oppenheimer1939,
 	author = {Oppenheimer, J Robert and Snyder, Hartland},
