--- a/gr-qc-9305007/gr-qc-9305007.tex
+++ b/gr-qc-9305007/gr-qc-9305007.tex
@@ -55,7 +55,8 @@ bookmarksopenlevel=10
 %\pdfbookmark[1]{Introduction}{Introduction}
 
 \begin{document}
-\title{AVERAGE ENTROPY OF A SUBSYSTEM\thanks
+
+\title{Average Entropy of a Subsystem \thanks
 {Alberta-Thy-22-93, gr-qc/9305007, Phys.\ Rev.\ Lett. {\bf 71}, 1291
 (1993).}}
 \author{ Don N. Page\\
@@ -66,7 +67,7 @@ Edmonton, Alberta\\Canada T6G 2J1\\
 Internet:  don@page.phys.ualberta.ca}
 \date{(1993 May 7, minor revisions Aug. 5)}
 \maketitle
-\large
+
 \begin{abstract}
 If a quantum system of Hilbert space dimension $mn$ is in a random
 pure state,
