--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,53 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-18 07:21:59 -0400 
+%% Created for Pete Su at 2023-08-18 07:34:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Page1980,
+	author = {Page, Don N},
+	date-added = {2023-08-18 07:33:56 -0400},
+	date-modified = {2023-08-18 07:33:57 -0400},
+	journal = {Physical Review Letters},
+	number = {5},
+	pages = {301},
+	publisher = {APS},
+	title = {Is black-hole evaporation predictable?},
+	volume = {44},
+	year = {1980}}
+
+@article{Page1993a,
+	author = {Don N. Page},
+	date-added = {2023-08-18 07:33:12 -0400},
+	date-modified = {2023-08-18 07:33:16 -0400},
+	doi = {10.1103/physrevlett.71.3743},
+	journal = {Phys. Rev. Lett.},
+	note = {\href{http://arxiv.org/abs/hep-th/9306083v2}{arxiv:hep-th/9306083v2}},
+	number = {23},
+	pages = {3743--3746},
+	publisher = {American Physical Society ({APS})},
+	title = {Information in black hole radiation},
+	url = {https://doi.org/10.1103%2Fphysrevlett.71.3743},
+	volume = {71},
+	year = 1993,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevlett.71.3743},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevlett.71.3743}}
+
+@inproceedings{Page1994,
+	author = {Page, Don N},
+	booktitle = {Proceedings of the 5th Canadian conference on general relativity and relativistic astrophysics},
+	date-added = {2023-08-18 07:31:11 -0400},
+	date-modified = {2023-08-18 07:31:46 -0400},
+	note = {\href{https://arxiv.org/abs/hep-th/9305040}{axrxiv:hep-th/9305040}},
+	organization = {World Scientific},
+	pages = {1--41},
+	title = {Black hole information},
+	volume = {1},
+	year = {1994}}
 
 @article{Page1993,
 	author = {Don N. Page},
