--- a/2012.05770/lessons.tex
+++ b/2012.05770/lessons.tex
@@ -9,6 +9,53 @@
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{graphicx}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 %\usepackage{epstopdf}
 %\usepackage{rerunfilecheck}
 %\usepackage{epstopdf}
@@ -3592,9 +3639,10 @@ In CFT language, the vacuum state corresponds to the identity operator. The spec
 \langle 0| O_{n, \ell} O_{n, \ell}^{\dagger} | 0 \rangle = G_{n, \ell}.
 \ee
 If we Fourier transform back to the time domain we find that
-\be
-\langle 0| O_{\ell}(t) O_{\ell}(t') | 0 \rangle = \frac{\Gamma (\ell+\Delta )^2 e^{i(\Delta +\ell)(t' - t)} }{\Gamma \left(\frac{1}{2} (-d+2 \Delta +2)\right)^2 \Gamma \left(\frac{1}{2} (d+2 \ell)\right)^2} \, _2F_1\left(\ell+\Delta ,\ell+\Delta ;1;e^{2 i (t' - t)}\right).
-\ee
+\begin{multline}
+\langle 0| O_{\ell}(t) O_{\ell}(t') | 0 \rangle = \\ 
+\frac{\Gamma (\ell+\Delta )^2 e^{i(\Delta +\ell)(t' - t)} }{\Gamma \left(\frac{1}{2} (-d+2 \Delta +2)\right)^2 \Gamma \left(\frac{1}{2} (d+2 \ell)\right)^2} \, _2F_1\left(\ell+\Delta ,\ell+\Delta ;1;e^{2 i (t' - t)}\right).
+\end{multline}
 
 
 
