--- a/2012.05770/lessons.tex
+++ b/2012.05770/lessons.tex
@@ -539,6 +539,7 @@ The main physical point is as follows.  For a black hole formed from collapse, a
 
 \subsubsection{Flat space \label{secflathawkingrad}}
 Consider a black hole formed from the collapse of some matter. The Penrose diagram, ignoring any backreaction of Hawking radiation, is displayed in Figure \ref{naivepenrose}.
+
 \begin{figure}[!ht]
 \begin{center}
 \includegraphics[height=0.4\textheight]{naivepenrose.png}
@@ -546,7 +547,7 @@ Consider a black hole formed from the collapse of some matter. The Penrose diagr
 \end{center}
 \end{figure}
 
-\paragraph{\bf The classical geometry \\}
+\subsubsection*{The classical geometry}
 Let us assume, for simplicity, that the black hole does not have charge or angular momentum. Then,  at {\em late times}, much after the infalling matter has fallen in,  the classical geometry tends to settle down to that of the Schwarzschild black hole. This follows because any perturbation near the horizon tends to die off exponentially. Therefore at late times we can write
 \be
 \label{latetimemetric}
@@ -566,7 +567,7 @@ d \rtor = {d r \over f(r)}.
 \ee
 Note that $\rtor \rightarrow -\infty$ near the horizon, both as we approach from outside ($r \rightarrow r_h^+$) and we approach it from inside ($r \rightarrow r_h^-$).
 
-\paragraph{\bf The propagation of fields \\}
+\subsubsection*{The propagation of fields }
 Now consider a minimally coupled scalar field, $\phi$,  in this geometry.  If we are considering physics over time scales where the back-reaction of evaporation does not cause appreciable changes in the geometry,  there is a convenient choice of solutions to the Klein-Gordon equation that can be used to expand the field. If we consider solutions with frequency, $\omega$, and angular quantum numbers denoted by $\ell$, then for the radial part of the solution, we choose one set of solutions, $\fin(\omega, \ell, \rtor)$, that are purely ``ingoing'' at the horizon and another set, $\fout(\omega, \ell, \rtor)$, that also has an outgoing component \cite{Candelas:1980zt,dewitt1975quantum}.
 \be
 \label{foutfinexpansion}
@@ -601,7 +602,7 @@ C_{\omega, \ell} = A_{\omega, \ell} \white_{\omega, \ell} + B_{\omega, \ell} \gr
 Note that continuity {\em cannot} be used to fix the operators $\widetilde{A}_{\omega, \ell}$ in terms of $A_{\omega, \ell}$ and $B_{\omega, \ell}$.
 
 
-\paragraph{\bf Hawking radiation \\}
+\subsubsection*{Hawking radiation }
 Now, we turn to the application of the result derived in section \ref{corrnull}. In the  so-called Kruskal coordinates,
 \be
 \label{kruskaldef}
@@ -646,7 +647,7 @@ We also emphasize that this derivation places no constraint on the ``ingoing'' m
 \subsubsection{AdS \label{adshawkingderiv}}
 We now describe how almost precisely the same procedure can be used to understand Hawking radiation in AdS.
 
-\paragraph{\bf Classical geometry \\}
+\subsubsection*{Classical geometry }
 We again assume that at late times, the metric tends to the form displayed in equation \eqref{latetimemetric}. With the AdS radius set to $1$, the only difference is that now the function $f(r)$ is given by
 \be
 \label{fadsexplicit}
@@ -656,7 +657,7 @@ The constant of proportionality between $\mu$ and the mass remains the same as i
 
 We will again define a tortoise coordinate satisfying $d \rtor = {d r \over f(r)}$ which tends to $-\infty$ near the horizon and approaches a constant value near the asymptotic boundary.
 
-\paragraph{\bf Propagation of fields \\}
+\subsubsection*{Propagation of fields }
 In AdS, it is natural to impose normalizable boundary conditions on the field. Given a scalar field, $\phi$, of mass $m$, we demand that, as $r \rightarrow \infty$, the field dies off as $r^{-\Delta}$ where $2 \Delta = d + \sqrt{d^2 + 4 m^2}$. For this section, the relevance of this boundary condition is that it relates the left- and right-moving modes near the boundary.
 
 Therefore, at late times, the field can be expanded as
@@ -924,7 +925,7 @@ Two systems are said to be {\em entangled} if their observables have correlation
 
 
 
-\paragraph{\bf CHSH correlators and Tsirelson's bound \\}
+\subsubsection*{CHSH correlators and Tsirelson's bound }
 
 Let $A_1, A_2$ be a pair of observables from one system  and  $B_1, B_2$ be a pair of observables from another system.    We assume that the eigenvalues of all the observables are in the range $[-1, 1]$. Both the systems can be part of a larger system and the precise mathematical assumption we require is just that, in this larger Hilbert space, $[A_i, B_j] = 0$. The CHSH operator, $C_{AB}$, is
 defined as the joint observable
@@ -958,7 +959,7 @@ The systems probed by the $A$ and $B$ operators are said to be entangled if $2 \
 
 
 
-\paragraph{\bf Monogamy of entanglement \\}
+\subsubsection*{Monogamy of entanglement }
 If  two systems are entangled with each other, then ``monogamy'' means that neither of them can be entangled with a third system. There are various measures of entanglement, and many of them have an associated notion of monogamy. If we use CHSH
 correlators, then the formulation of the monogamy of entanglement becomes particularly elegant.
 
@@ -1273,7 +1274,7 @@ and it is unclear what stabilizes it and prevents it from falling into the singu
 
 We will now point out a loophole in the logic that led to the monogamy paradox. After that, we will briefly outline a resolution that will be developed at length in the next two sections.
 
-\paragraph{\bf Failure of factorization.}
+\subsubsection*{Failure of factorization.}
 We first  explain why the assumption made to set up the monogamy paradox --- namely that the  Hilbert space on a nice slice factorizes so that there are distinct factors $H_{A}, H_{B}, H_{C}$ --- is demonstrably wrong in quantum gravity.
 
 The reason is that when gravity is treated quantum mechanically, it is impossible to write down an operator that modifies the state of the system  in the region A or the region B without modifying the state of region C. (Here we are referring to the regions as marked on Figure \ref{penroseabc}.)   This is a consequence of the fact that there are no local gauge-invariant operators in gravity \cite{dewitt1960quantization, kuchar1991problem, Giddings:2005id}. This may sound like an abstruse theorem, but it is simple to understand intuitively.  If one attempts to write down an operator that is strictly localized in region A or region B  then, since these regions have finite extent, the Heisenberg uncertainty principle tells us that this operator must be a superposition of an infinite number of operators of different energies.
@@ -1290,7 +1291,7 @@ theory  --- where our intuitions are usually trained --- these effects do not ap
 starts asking fine-grained quantum-information questions about black-hole evaporation in a theory of gravity, the failure of factorization becomes important. This is therefore a loophole in the logic leading up the monogamy paradox. (Some recent discussions, from a differing perspective, can be found in \cite{Karlsson:2020uga,Karlsson:2019vlf}.)
 
 
-\paragraph{Holography of Information.}
+\subsubsection*{Holography of Information.}
 An examination of the argument above already informs us that the failure of the Hilbert space to factorize is
  much more serious in gravity than it is in gauge theories. Even in a gauge theory, the algebra of operators
 associated with a region has a nontrivial center \cite{Casini:2013rba,Casini:2014aia,Soni:2015yga,Ghosh:2015iwa}, and so there is some ambiguity in how to divide up the set of local operators between a region and its complement. But, in a gauge theory, there are some gauge invariant operators that are  unambiguously localized in a region like, for instance, a small Wilson loop operator that is completely confined
@@ -1617,7 +1618,7 @@ The Hilbert space above does not include massive particles because the operators
 So far we have reviewed standard material but we now proceed to our argument. We will now show that all operators ${\cal H} \rightarrow {\cal H}$ can be represented as operators supported in the region $u \in (-\infty, -{1 \over \epsilon})$. This region is ``near'' the past boundary of future null infinity,  $\scrippast$, and is marked on  Figure \ref{allinfo}. This is the precise sense in which the principle of holography of information holds in this setting. There are two steps in the argument, just as in the case of AdS.
 
 
-\paragraph{\bf Step 1: Vacuum operators are located near $\scrippast$.}
+\subsubsection*{Step 1: Vacuum operators are located near $\scrippast$.}
 First we show that the projector onto the manifold of vacua and transition operators between different vacua are operators that are accessible near $\scrippast$.  This is the physically important step, and the one that is special to gravity.
 
 This follows because both the Hamiltonian and the supertranslation charges are elements of the algebra in $u \in (-\infty, -{1 \over \epsilon})$.  Physically, if an observer were to attempt to measure these charges near $\scrippast$, the probability, in quantum mechanics, for the observer to obtain a given result is given by the expectation value of the projector onto eigenspaces of these operators. Therefore, these projectors are themselves elements of the algebra near $\scrippast$. By taking a sharp limit of these projectors we conclude that the operator $|\supcharge[s] \rangle \langle \supcharge[s] |$ is an element of the algebra near $u \rightarrow -\infty$.\footnote{We are being a little sloppy here, since the vacua are normalized as $\langle \supcharge[s] | \supcharge[s'] \rangle = \delta(\supcharge[s] - \supcharge[s'])$ and so to obtain a projector we need to smear this operator over some finite range of charges.}
@@ -1629,7 +1630,7 @@ Second, within the low-energy theory, one can find operators that change the val
 for an arbitrary pair of vacua.
 We conclude that these operators are also physically accessible near $\scrippast$.
 
-\paragraph{\bf Step 2: Arbitrary operators, ${\cal H} \rightarrow {\cal H}$ are located near $\scrip$.}
+\subsubsection*{Step 2: Arbitrary operators, ${\cal H} \rightarrow {\cal H}$ are located near $\scrip$.}
 Armed with the result above, we now note that if $|n_{\supcharge[s]} \rangle$ is a state in the Fock space $\hilb[s]$ then it can be approximated
 arbitrary well by a state from the space
 \be
@@ -1655,7 +1656,7 @@ The operator on the right is just a product of three operators, all of which are
 The result above tells us that all information about massless particles  can be obtained from near $\scrip$. Another way to state the result that we have found is that any two distinct states --- pure or mixed --- on ${\cal H}$ can be distinguished just by observations near $\scrippast$. This is surprising, when viewed from the perspective of LQFT, since one usually imagines that it would require observations on all of $\scrip$ to uniquely identify a state. But the remarkable feature of the holography of information is that the same information is also available just near $\scrippast$.
 
 
-\paragraph{\bf A possible refinement. \\}
+\subsubsection*{A possible refinement. }
 \begin{figure}[!ht]
 \begin{center}
 \includegraphics[height=0.5\textheight]{bdrynullwithcuts.pdf}
@@ -1850,7 +1851,8 @@ Since the von Neumann entropy with respect to an algebra is a measure of the inf
 The reader might be concerned that a black hole is a very complicated nonperturbative state, that is not incorporated in the analysis of section \ref{secholography}.  But the beauty of  the description on $\scrip$ is that these complications all go away. The Hilbert space on $\scrip$ is just a Fock space, and so the description of a black hole in this space is just in terms of the free gas of Hawking radiation that it emits.  Therefore the claim
 is just that any state in this Fock space can be identified by considering correlators of the Hamiltonian, supertranslation charges, and other dynamical fields in a small interval near $\scrippast$.   This seems to be a very robust statement.
 
-\paragraph{\bf Difficulty of extracting information.} By thinking in terms of correlators, one can also make some simple-minded estimates of the difficulty involved in extracting information from the black-hole interior.  In  section \ref{morelowenergy} we already explained how simple states could be identified using two-point correlators near $\scrippast$.  Of course, for the final state of a black hole, it is insufficient to consider only two-point correlators. We expect that identifying a black-hole microstate will require at least $S$-point correlators where $S$ is the black hole entropy. Moreover, to distinguish between different black-hole microstates may require an accuracy that scales exponentially with $S$. These are formidable obstructions if one is an experimentalist! But, from a theoretical perspective, there seems to be no difficulty in identifying arbitrary pure and mixed states on ${\cal H}$ by using physical correlators on $\scrip$ in the range $u \in (-\infty, -{1 \over \epsilon})$.
+\subsubsection*{Difficulty of extracting information.}
+By thinking in terms of correlators, one can also make some simple-minded estimates of the difficulty involved in extracting information from the black-hole interior.  In  section \ref{morelowenergy} we already explained how simple states could be identified using two-point correlators near $\scrippast$.  Of course, for the final state of a black hole, it is insufficient to consider only two-point correlators. We expect that identifying a black-hole microstate will require at least $S$-point correlators where $S$ is the black hole entropy. Moreover, to distinguish between different black-hole microstates may require an accuracy that scales exponentially with $S$. These are formidable obstructions if one is an experimentalist! But, from a theoretical perspective, there seems to be no difficulty in identifying arbitrary pure and mixed states on ${\cal H}$ by using physical correlators on $\scrip$ in the range $u \in (-\infty, -{1 \over \epsilon})$.
 
 Of course, it is possible to also use operators at larger values of $u$ to obtain the same information. The discussion of section \ref{morelowenergy} is again relevant: the profile of the shock-wave state considered there can be extracted either by using gravitational effects near $u \rightarrow -\infty$ or by making direct measurements of the massless field operators near $u = 0$. The process of using correlators at larger values of $u$ to reconstruct the state is what is commonly referred to as ``collecting Hawking radiation.'' However, these measurements {\em also} require at least $S$-point correlators and the same accuracy $e^{-S}$. So it is not a priori clear that it is any easier to extract information from a black hole by waiting and collecting the Hawking radiation than by using gravitational effects in the black hole exterior before it has evaporated.
 
@@ -1863,7 +1865,7 @@ it harder to extract information by making measurements near $u \rightarrow -\in
 
 
 
-\paragraph{Penrose diagram.}
+\subsubsection*{Penrose diagram}
 There has also been some debate in the literature about the precise form that the Penrose diagram for an evaporating black hole should take. For instance \cite{Ashtekar:2020ifw} explained that the Penrose diagram of Figure \ref{backreactpenrose} should be replaced with the modified  Penrose diagram of Figure 2 of \cite{Ashtekar:2020ifw}.  One of the arguments advanced is that the Penrose diagram of Figure \ref{backreactpenrose} suggests that the interior of the black hole
 is clearly spacelike to $\scrip$. Therefore, this diagram, suggests that information is lost in the singularity.
 
@@ -1889,7 +1891,7 @@ The principle of holography of information, as we formulated it in \ref{holinfad
 
 This is not surprising when considered from the point of view of AdS/CFT, especially when combined with the extrapolate dictionary \cite{Banks:1998dd}. The extrapolate dictionary tells us that CFT operators can be matched to the boundary limit of bulk operators. Since CFT operators on a given time slice clearly have all possible information about the state, it is clear that correlators of bulk operators near the boundary in a small time band also contain all information about the state.
 
-\paragraph{\bf Difficulty of extracting information.}
+\subsubsection*{Difficulty of extracting information.}
 It is interesting to again compare --- in the context of a small black hole --- the relative difficulty of identifying the microstate using the quantum gravity effects that we have described,  and by simply waiting for the black hole to evaporate and ``collecting'' Hawking radiation.
 
 In Figure \ref{figadsbh}, we have shown a cartoon of a state that at time $t_1$ is well described by a gas of dust, which then collapses to a black hole at time $t_2$ and gradually becomes a gas of Hawking radiation again by time $t_3$.  Let us call this state, $|\Psi \rangle$.  We can now reconstruct the state by evaluating correlators of asymptotic operators in the vicinity of  any of the times $t_1, t_2, t_3$. For instance, if $O(\tau)$ is a boundary operator, then the set of all correlators of the form
@@ -2238,7 +2240,7 @@ The term ``island'' can be understood by looking at the same picture from a  $d$
 
 
 
-\paragraph{\bf Gravitating baths \\}
+\subsubsection*{Gravitating baths }
 It was recently pointed out in \cite{Geng:2020fxl} that the Karch-Randall setup described above allows for an elegant method of introducing gravity in the bath: one simply adds a second $AdS_{d}$ brane to the setup \cite{Kogan:2000vb}. This can be visualized as moving the boundary in Figure \ref{rsinit} into the bulk so that the bulk spacetime is now a ``wedge'' between two branes.   Then \cite{Geng:2020fxl} found that, for the purpose
 of computing a fine-grained entropy, one can no longer meaningfully divide the degrees of freedom in the bath across an arbitrary interface,  as can be done when the bath is nongravitational.   Consequently, there is no analogue of the ``black hole''/``radiation'' Page curve in the presence of a gravitating bath. This is precisely what the arguments presented above would lead us to expect.
 
@@ -2763,7 +2765,7 @@ with insertions of some ordinary operators and a mirror operator.  Then the equa
 \widetilde{\al}_n \al_m |\Psi \rangle = \al_m e^{-{\beta H \over 2}} \al_n^{\dagger} e^{\beta H \over 2} |\Psi \rangle.
 \ee
 
-\paragraph{\bf Commutators and conserved charges \\}
+\subsubsection*{Commutators and conserved charges }
 Recall that he mirror operators not only need to be correctly entangled with the operators outside the horizon, they also need to  commute with those operators outside to a good approximation.  The equations above ensure that {\em within} correlations involving simple operators on the state, $|\Psi \rangle$,  any polynomial of the mirror operators commutes with simple operators.
 \be
 [\ta_{\omega, \ell}, \al_m] |\Psi \rangle = 0;  \qquad  [\ta_{\omega, \ell}^{\dagger}, \al_n] |\Psi \rangle = 0.
@@ -2971,7 +2973,7 @@ an ordinary  operator that acts correctly on a large range of states, but imposs
 
 
 
-\paragraph{\bf Other interior constructions.}
+\subsubsection*{Other interior constructions.}
 Several other proposals have been made to understand the black-hole interior from the CFT. In this context, we would like to emphasize the following. In any microstate that has a smooth interior, any other construction of interior operators, if correct, {\em must agree} with the construction described in section \ref{mirroropreview} in its action on the little Hilbert space constructed about the microstate. This is because the behaviour of the mirror operators on a smooth microstate in the little Hilbert space is completely fixed by effective field theory.
 
 The construction of section \ref{mirroropreview} does not tell us, by itself, whether a given microstate has a smooth interior. And other constructions can disagree on microstates that do not have a smooth interior.  They can also differ in their action on states that are not part of the little Hilbert space.
@@ -3518,16 +3520,16 @@ In geometric optics, the {\em phase difference} between neighbouring rays is pre
 \ee
  for small {\em negative} values of  $v$. If we place the incoming state in the vacuum of the $C$ modes (which multiply $e^{-i \omega v}$) then it is not in the vacuum of the modes shown in \eqref{pastbehaviour}. In fact, the transformation between the modes $e^{-i \omega v}$ and the modes shown in \eqref{pastbehaviour} is precisely the transformation between Minkowski and Rindler modes. These Bogoliubov coefficients can be found explicitly as we have done in the main text of the article. Therefore we find that the vacuum of the $C$ modes translates into a thermal spectrum for the $A$-modes displayed in \eqref{futuremodes}.
 
-\paragraph{\bf The trans-Planckian problem \\}
+\subsubsection*{The trans-Planckian problem }
 The derivation above suggests that a semi-infinite interval on $\scrip$ is generated by a small range of coordinates on $\scrim$ near $v = v_{\text{last}}$. Therefore, the modes that emerge on $\scrip$ can be traced back to extremely blue-shifted modes on $\scrim$.  On the one hand, this feature is necessary for the geometric-optics approximation to hold since it is precisely because we are considering rapidly oscillating modes near the last ray that we can reliably ignore
 scattering from the infalling matter. On the other hand this gives rise to an issue that is sometimes called the ``trans-Planckian problem'', since the geometric optics derivation suggests that the modes on $\scrim$ that lead to Hawking radiation are coming from ``beyond'' the Planck scale. The concern is that the vacuum may not be well described by quantum-field excitations at such short distances \cite{tHooft:1996rdg}.
 
 The trans-Planckian problem is not really a problem, in that it does not invalidate the final result. It only reminds us that one has to be careful about this subtlety. One of the virtues of the derivation in section \ref{hawkingderiv} is that it does not suffer from the trans Planckian problem. It is indeed the case, that the approximately thermal nature of Hawking radiation has to do with short-range entanglement: even in section \ref{hawkingderiv}, we used the short-distance behaviour of the two-point function. But the reason for carefully introducing the smearing function in section \ref{hawkingderiv} was to smear this two-point function over a scale that is much larger than the Planck scale but much smaller than the characteristic curvature scale of the geometry. Provided the near-horizon region looks like empty space on this scale --- and the late time geometry has an approximate Killing symmetry ---  the final spectrum on $\scrip$  looks approximately thermal.
 
-\paragraph{\bf Entanglement across the horizon \\}
+\subsubsection*{Entanglement across the horizon }
 The geometric-optics derivation also provides insight into why modes outside the horizon must be entangled with ``partners'' behind the horizon. The ray-tracing argument tells us that both the state of the fields outside the horizon and the state behind the horizon arise from a small vicinity of $v = v_{\text{last}}$ on $\scrim$:  the region outside the horizon depends on $v < v_{\text{last}}$ whereas the region inside the horizon depends on $v > v_{\text{last}}$. So the entanglement across the horizon is simply the usual short-distance entanglement of fields near $v = v_{\text{last}}$ on $\scrim$.
 
-\paragraph{\bf The information paradox \\}
+\paragraph{\bf The information paradox }
 It is also possible to  reframe the information paradox in this setting.  One paradox, of course, is that the spectrum on $\scrip$ appears to be thermal. As we already explained in section \ref{secoldinfo}, the difference between pure states
  and thermal states --- as measured by physical observations --- can be exponentially small and so this is not really a paradox.
 
@@ -3647,7 +3649,7 @@ If we Fourier transform back to the time domain we find that
 
 
 
-\paragraph{\bf Interacting fields \\}
+\subsubsection*{Interacting fields }
 Now, lets turn on weak gravity. When we say that gravity is weak, we mean that the parameter
 \be
 N = {\ell_{\text{ads}} \over \ell_{\text{planck}}}
